--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -3,7 +3,7 @@
 .about-start,
 .about-end {
   padding: 100px;
-  background: rgba(255, 255, 255, 0.7);
+  /* background: rgba(255, 255, 255, 0.7); */
     backdrop-filter: blur(10px);
     border-radius: 10px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1)
@@ -97,14 +97,16 @@ textarea.form-control {
 @media (min-width: 992px) {
   .about-start {
     position: relative;
-    margin-right: -48px;
+    margin-right: -30px;
     z-index: 1;
+    height: 350px;
   }
 
   .about-end {
     position: relative;
-    margin-left: -48px;
+    margin-left: -30px;
     z-index: 1;
+    height: 350px;
   }
 }
 
