--- a/src/Pages/Hero.css
+++ b/src/Pages/Hero.css
@@ -133,13 +133,13 @@ html, body {
   gap: 20px;
   flex-wrap: wrap;
 }
-
-/* Responsive Adjustments */
 @media (max-width: 600px) {
   .bg-hero {
     padding-left: 20px;
     padding-right: 20px;
-    height: 70vh;  /* Adjust height on smaller screens */
+    height: 100vh; /* Adjust height to ensure the image covers the viewport */
+    background-size: cover; /* Ensure the image covers the container */
+    background-position: center; /* Center the image */
   }
 
   .bg-hero .col-lg-8 {
@@ -152,23 +152,28 @@ html, body {
     font-size: 2.5rem;
     margin-bottom: 10px;
     margin-left: 0;
+    margin-right: 100px;
   }
 
   .bg-hero .display-2 {
-    font-size: 2rem;
+    font-size: 1rem;
     margin-left: 0;
+    margin-right: 100px;
   }
 
   .btn-secondary, .btn-outline-secondary {
     padding: 12px 24px;
     font-size: 1rem;
     margin-top: 10px;
+   
+    
   }
 
   .bg-hero .btn-container {
     flex-direction: column;
   }
 }
+
 
 @media (max-width: 1024px) and (min-width: 601px) {
   .bg-hero {
