--- a/src/Pages/call.css
+++ b/src/Pages/call.css
@@ -1,8 +1,8 @@
 .bg-call-to-action {
-  background: url(../Images/image.png);
+  background: url(../Images/heroimg.jpg);
   background-size: cover;
   background-position: center;
-  height: 600px;
+  height: 700px;
 }
 
 
