--- a/src/Pages/call.css
+++ b/src/Pages/call.css
@@ -1,7 +1,8 @@
 .bg-call-to-action {
   background: url(../Images/heroimg.jpg);
-  background-size: cover;
+  background-size:contain;
   background-position: center;
+  background-repeat: no-repeat;
   height: 700px;
 }
 
