--- a/src/Pages/Footer.css
+++ b/src/Pages/Footer.css
@@ -36,7 +36,7 @@
 
 .footer-link:hover {
   text-decoration: underline;
-  color: rgb(227, 16, 16);
+   font-weight: 700;
 }
 
 /* Newsletter Form */
