--- a/src/Pages/Service.css
+++ b/src/Pages/Service.css
@@ -14,14 +14,15 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 4px;
-  border: 1px solid black;
+ 
+ 
   height: 300px; /* Ensure all containers have the same size */
   transition: transform 0.5s, background-size 0.5s;
   display: flex;
   flex-direction: column;
   justify-content: flex-center; /* Moves title to bottom */
   padding-bottom: 20px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
  
 }
 
