--- a/src/Pages/Service.css
+++ b/src/Pages/Service.css
@@ -14,21 +14,21 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
- 
- 
   height: 300px; /* Ensure all containers have the same size */
-  transition: transform 0.5s, background-size 0.5s;
+  transition: transform 0.5s, background-size 0.5s, box-shadow 0.3s ease, filter 0.3s ease, transform 0.3s ease;
   display: flex;
   flex-direction: column;
   justify-content: flex-center; /* Moves title to bottom */
   padding-bottom: 20px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
- 
+  border-radius: 8px; /* Optional: Adds rounded corners */
 }
 
 .service-item:hover {
   background-size: 110%; /* Slightly increases background size */
   transform: scale(1.05); /* Grows the container slightly on hover */
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2); /* Adds shadow on hover */
+  filter: brightness(1.1); /* Slightly brightens the box */
 }
 
 .service-item .service-icon {
@@ -55,8 +55,6 @@
   transition: 0.5s;
 }
 
-
-
 .service-item h3 {
   font-size: 16px;
   margin: 0;
@@ -78,7 +76,6 @@
   opacity: 1;
 }
 
-
 @media (max-width: 991.98px) {
   .bg-quote {
     background-size: cover;
@@ -99,7 +96,6 @@
   opacity: 0; /* Hidden by default */
   transform: translateY(20px); /* Slide-in effect */
   transition: opacity 0.5s, transform 0.5s; /* Smooth transition */
-
 }
 
 .service-item:hover .title1 {
