--- a/src/Pages/testo.css
+++ b/src/Pages/testo.css
@@ -1,3 +1,7 @@
+.containerss-fluid{
+  margin-top: 60px;
+}
+
 .testimonial-section {
   background-color: #0b5079;
   padding: 60px 0;
@@ -65,17 +69,12 @@
 /* Increase the size of the arrows */
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  width: 80px; /* Decrease the width */
-  height: 80px; /* Set height for proportion */
+  width: 100px; /* Decrease the width */
+  height: 100px; /* Set height for proportion */
   border: solid white; /* Add a border to make arrows thicker */
   border-width: 0 4px 4px 0; /* Define thickness */
   background: none; /* Remove background */
   transform: rotate(45deg); /* Create arrow shape */
-}
-.carousel-control-prev-icon,
-.carousel-control-next-icon:hover{
-  width: 100px;
- 
 }
 
 .carousel-control-prev-icon {
